# Monary

./: .hgignore  .hgtags  CHANGES.TXT  CONTRIBUTING.rst  LINK_LIST.txt  MANIFEST.in  NOTICE.TXT  README.rst  build.sh  cmonary.c  libcmonary.exp  libcmonary.lib  monary.py  requirements.txt  setup.py  spamit.py  test_cmonary.py  windows_instructions.txt
cmonary/: cmonary.c
doc/: .project  Makefile  changelog.rst  conf.py  contributors.rst  faq.rst  index.rst  installation.rst  make.bat  reference.rst  tutorial.rst
doc/examples/: aggregation.rst  binary.rst  block-query.rst  connection.rst  index.rst  insert.rst  monary-param.rst  query.rst  remove.rst  ssl.rst  string.rst  timestamp.rst  update.rst
doc/source/: conf.py  index.rst
monary/: CMakeLists.txt  __init__.py  cmonary.c  datehelper.py  monary.py  monary_param.py  pymonary.py  write_concern.py
monary/cmake/: FindMONGOC.cmake
mongodb-mongo-c-driver-0.98.0/: Makefile.in  aclocal.m4  configure
mongodb-mongo-c-driver-0.98.0/doc/: mongoc_bulk_operation_delete.3  mongoc_bulk_operation_delete_one.3  mongoc_bulk_operation_t.3  (+231 more)
mongodb-mongo-c-driver-1.0.0/: Makefile.in  configure
test/: __init__.py  test_aggregation.py  test_authenticate.py  test_block_aggregation.py  test_block_query.py  test_column_types.py  test_datehelper.py  test_exceptions.py  test_helpers.py  test_inserts.py  test_query_basics.py  test_ssl.py  test_ssl_instructions.txt  test_utf8.py
timing/: clear.py  insert.py  insert_monary.py  insert_pymongo.py  profile.py  query_monary.py  query_monary_block.py  query_plain.py  query_pymongo.py
(+600 files in other folders)
